Tue Jul  1 17:50:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Added logic to indicate errors in log files that TestFramework
          should ignore.

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/Service_Participant.cpp:

          Added log messages indicating when dtor is called.

        * dds/DCPS/MessageTracker.cpp:

          Added traceability to redmine issue and fixed log statement.

        * dds/DCPS/WriteDataContainer.cpp:

          Fixed log statement.

        * tests/DCPS/Messenger/run_test.pl:
        * tests/DCPS/LargeSample/run_test.pl:

          Added ignoring already identified redmine issue.

Tue Jul  1 17:16:24 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/transport/framework/DataLinkSet.h:
        * dds/DCPS/transport/framework/DataLinkSet.inl:

          Copy map_ and release lock in send_control prior to calling send_i
          due to deadlock.

        * tests/DCPS/ManualAssertLiveliness/Writer.cpp:

          Identify sending writer in sample.

        * tests/DCPS/ManualAssertLiveliness/subscriber.cpp:

          Keep last 4 messages, due to multiple writers.

Tue Jul  1 15:45:06 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/PerlDDS/Run_Test.pm:

          Increased time to wait for 2nd and all following processes to
          shutdown before killing and added missing _alternate_transport.

        * tests/DCPS/LargeSample/run_test.pl:

          Increased time to wait before killing the subscriber.

        * tests/DCPS/Messenger/run_test.pl:

          Changed order of creation to cause subscriber to be killed first,
          increased time to wait for subscriber to be kill, and changed to use
          default TestFramework functionality.

Tue Jul  1 15:09:38 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * dds/DCPS/MessageTracker.h:
        * dds/DCPS/MessageTracker.cpp:
