@@ -1,3 +1,13 @@
+Tue Jul  1 18:34:14 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
+
+        * bin/PerlDDS/Run_Test.pm:
+
+          Cleaned up preventing adding flags.
+
+        * tests/DCPS/ManyToMany/run_test.pl:
+
+          Changed to use TestFramework.
+
 Tue Jul  1 17:50:00 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>
 
         * bin/PerlDDS/Run_Test.pm:
